fix region spacing & supporter regions

--- a/styles/legacy.less
+++ b/styles/legacy.less
@@ -41,11 +41,6 @@ body {
   margin-right: auto;
 }
 
-main.o-Flex {
-  @media not all and (min-width: 45em) {
-    .flex-direction(column);
-  }
-}
 
 // Main column of the site.
 // Contains super relevant info.
@@ -73,9 +68,6 @@ main.o-Flex {
   @media screen and (min-width: 75em) {
     .flex(0 0 450px); // FIXME magic number!!!
   }
-  main & {
-    padding-left: 2rem; padding-right: 2rem;
-  }
 }
 
 
@@ -99,6 +91,9 @@ main.o-Flex {
 }
 .c-Mast--nav--sub {
   .mx-bc-accent();
+}
+.c-Mast--coop {
+  background-color: @color_coop_bg;
 }
 
 
@@ -125,7 +120,6 @@ main.o-Flex {
 // ^updated
 // : 2017-04-03
 .c-HomeLink__Logo {
-  margin: 0 1rem;
   @media not all and (min-width: 45em) {
     width: 90px; // FIXME magic number!!!
     // NOTE: cannot use `flex` to set width if flex-direction is column
@@ -255,9 +249,6 @@ main.o-Flex {
 .c-NavBar--main {
   .flex-justify-content(flex-start);
   & > * {
-    &:first-child {
-      margin-left: 1rem;
-    }
     &:hover,
     &:focus,
     &.active {
@@ -425,19 +416,15 @@ main.o-Flex {
 }
 
 
-// Content area of the site. Contains prose.
+// Use this helper to add horizontal space to an elemnet so it is not full-bleed.
 //
 // ^author
 // : Chris Harvey
 // ^updated
 // : 2017-04-04
-.t-Content {
-  @media not all and (min-width: 45em) {
-    margin: 0 1em;
-  }
+.h-Spaced {
+  margin: 0 1rem;
 }
-
-
 
 
 
@@ -446,7 +433,19 @@ main.o-Flex {
     text-align: left;
   }
 }
+@media not all and (min-width: 45em) {
+  .-xd-c-nM {
+    .flex-direction(column);
+  }
+}
 
+
+// fix flush against window
+.c-HomeLink__Logo,
+.c-NavBar--main > :first-child {
+  margin: 0 1rem;
+}
+// fix menu sizing
 @media not all and (min-width: 751px) {
   .c-NavBar--main > *:first-child {
     display: none;
